Rename to conventional lowercase

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "PlaceFlow",
+  "name": "placeflow",
   "homepage": "https://kennywibowo.github.io/PlaceFlow/",
   "authors": [
     {"name": "Kenny Wibowo", "email": "kewibowo@ucsd.edu", "homepage": "http://wibow.io"}
